--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,6 +10,7 @@
   width: auto;
   margin: 0 auto;
   margin-top: 100px;
+  height: 100vh;
 }
 
 
@@ -46,6 +47,8 @@
   #contentWorks{
     font-size: 5vw;
     margin: 0 50px;
+    text-align: center;
+    list-style: none;
   }
 
   .workItens{
@@ -77,7 +80,6 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    height: 500px;
     font-family: 'Open Sans', sans-serif;
   }
 
@@ -101,7 +103,7 @@
     max-height: 300px;
     border: 1px solid #fff;
     border-radius: 10px;
-    margin: 50px;
+    margin: 30px 30px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -109,6 +111,7 @@
   }
 
   #rafael{
+    margin: 30px 30px;
     width: 80vw;
     max-width: 400px;
     height: 50vw;
@@ -150,4 +153,17 @@
     margin-bottom: 50px;
   }
 
+}
+
+@media(min-width: 907px) {
+  #main{
+    display: flex;
+    justify-content: center;
+    max-width: 1250px;
+    width: auto;
+    margin: 0 auto;
+    margin-top: 100px;
+    height: 100vh;
+  }
+  
 }
